@startuml database

entity Account {
    * id: number <<primary key>>
    * type: string
    * firstname: string
    * lastname: string
    * username: string
    * role: string <<foreign key Permission.role>>
    * password: string
}

entity Participant {
    * id: number <<primary key>>
    * firstname: string
    * lastname: string
    * organisation: string
    * account: number <<foreign key Account.id>>
    * rfid: string
    * createdAt: Date
    * active: boolean
    --
    clockedin: boolean
    financing: string
}

entity Attendance {
    * id: number <<primary key>>
    * participantID: number <<foreign key Participant.id>>
    * clockinDate: Date
    * signature: string
    --
    clockoutDate: Date
    workDuration: number
}

entity Permission {
    * id: number <<primary key>>
    * role: string
    * permissions: string
}

entity ApiKey {
    * id: number <<primary key>>
    * apikey: string
    * permissionId: number <<foreign key Permission.id>>
}

entity Room {
    * id: number <<primary key>>
    * name: string
    * width: number
    * height: number
    * scale: number
    --
    rotation: number
}

entity Wall {
    * id: number <<primary key>>
    * xpos: number
    * ypos: number
    * height: number
    * RoomID: number <<foreign key Room.id>>
    --
    rotation: number
}

entity Workplace {
    * id: number <<primary key>>
    * xpos: number
    * ypos: number
    * RoomID: number <<foreign key Room.id>>
    * name: string
    --
    extraInfo: blob
    rotation: number
}

entity Schedule {
    * id: number <<primary key>>
    * name: string
    * startDate: Date
    --
    endDate: Date
    mon: number <<foreign key Workplace.id>>
    thues: number <<foreign key Workplace.id>>
    wed: number <<foreign key Workplace.id>>
    thurs: number <<foreign key Workplace.id>>
    fri: number <<foreign key Workplace.id>>
}

entity ScheduleParticipant {
    * id: number <<primary key>>
    * scheduleId: number <<foreign key Schedule.id>>
    * participantId: number <<foreign key Participant.id>>
}

Permission ||--o{ Account
Permission ||--o{ ApiKey
Account ||--o{ Participant
Participant ||--o{ Attendance
Participant ||--o{ ScheduleParticipant
Schedule ||--o{ ScheduleParticipant
Room ||--o{ Wall
Room ||--o{ Workplace
Workplace |o--o{ Schedule : mon
Workplace |o--o{ Schedule : thues
Workplace |o--o{ Schedule : wed
Workplace |o--o{ Schedule : thurs
Workplace |o--o{ Schedule : fri
@enduml
